added html files

--- a/rides.html
+++ b/rides.html
@@ -3,17 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Haunted Hayride</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        border: solid 5px;
+      }
+    </style>
   </head>
   <body class="bg-warning">
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary nav-underline" style="font-family: 'Times New Roman', Times, serif; font-style: oblique;">
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary nav-underline"
+        style="
+          font-family: 'Times New Roman', Times, serif;
+          font-style: oblique;
+        "
+      >
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Fables Fall Fest</a>
           <button
@@ -30,15 +41,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
 
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
+                <a class="nav-link dropdown-toggle"
                   href="pricing.html"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -47,10 +59,18 @@
                   Festival Fun
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="pricing.html">Haunted Hayride</a></li>
-                  <li><a class="dropdown-item" href="pricing.html">Pumpkin Carving Contest</a></li>
                   <li>
-                    <a class="dropdown-item" href="pricing.html">Best Costume Contest</a>
+                    <a class="dropdown-item" href="rides.html"
+                      >Haunted Hayride</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="contests.html"
+                      >Pumpkin Carving Contest</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="tickets.html">Tickets</a>
                   </li>
                 </ul>
               </li>
@@ -59,15 +79,7 @@
         </div>
       </nav>
     </header>
-    <main>
-      <h1 class="text-center text pt-5" style="font-family: 'Times New Roman', Times, serif; font-size: 900%; text-decoration-line: underline; font-style: oblique;">Fables Fall Fest</h1>
-      <section>
-        <div style="text-align: center;">
-        <img width= 500px src="img/fiery-pumpkin.jpg" class="rounded" alt="..."
-        >
-      </div>
-      </section>
-    </main>
+<main></main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
